objects/Country__c.object
<CustomObject>
    <description>Country</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code</description>
        <inlineHelpText>Country Code</inlineHelpText>
        <label>Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ID__c</fullName>
        <description>Country ID</description>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>Country ID</inlineHelpText>
        <label>Country ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country_Status__c</fullName>
        <description>Country Status</description>
        <inlineHelpText>Country Status</inlineHelpText>
        <label>Country Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_PSTL_Code__c</fullName>
        <description>Default Postal Code</description>
        <inlineHelpText>Default Postal Code</inlineHelpText>
        <label>Default PSTL Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FS Country</description>
        <inlineHelpText>FS Country</inlineHelpText>
        <label>FS Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrdGrp10__c</fullName>
        <description>Product Group 10 Count</description>
        <inlineHelpText>Product Group 10 Count</inlineHelpText>
        <label>PrdGrp10</label>
        <summarizedField>CountryScoreCard__c.PrdGrp10__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Country__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrdGrp1__c</fullName>
        <description>Product Group 1 Count</description>
        <inlineHelpText>Product Group 1 Count</inlineHelpText>
        <label>PrdGrp1</label>
        <summarizedField>CountryScoreCard__c.PrdGrp1__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Country__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrdGrp2__c</fullName>
        <description>Product Group 2 Count</description>
        <inlineHelpText>Product Group 2 Count</inlineHelpText>
        <label>PrdGrp2</label>
        <summarizedField>CountryScoreCard__c.PrdGrp2__c</summarizedField>
        <summaryForeignKey>CountryScoreCard__c.Country__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Group_10__c</fullName>
        <description>Product Group 10</description>
        <inlineHelpText>Product Group 10</inlineHelpText>
        <label>Product Group 10</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <description>Product Group 1</description>
        <inlineHelpText>Product Group 1</inlineHelpText>
        <label>Product Group 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <description>Product Group 2</description>
        <inlineHelpText>Product Group 2</inlineHelpText>
        <label>Product Group 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country_ID__c</columns>
        <columns>NAME</columns>
        <columns>FS_Country__c</columns>
        <columns>Product_Group_1__c</columns>
        <columns>Product_Group_2__c</columns>
        <columns>Product_Group_3__c</columns>
        <columns>Product_Group_4__c</columns>
        <columns>Product_Group_5__c</columns>
        <columns>Product_Group_6__c</columns>
        <columns>Product_Group_7__c</columns>
        <columns>Product_Group_8__c</columns>
        <columns>Product_Group_9__c</columns>
        <columns>Product_Group_10__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>